@@ -273,6 +273,9 @@ Version 1.11.0-svn:
    * [scroll_to] and [scroll_to_unit] now accept an optional boolean immediate=
      attribute (defaults to false) specifying whether to ignore the scroll
      speed setting in Preferences and instantly warp to the selected location
+   * Added [lock_view] and [unlock_view] WML actions, for locking and unlocking
+     gamemap view scrolling (so the user cannot scroll, while WML/Lua actions
+     still can, i.e. for cutscenes)
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
